# initial3d

./: .gitignore  CMakeLists.txt  README.md  test.c  test.h.in
cmake/modules/: FindAPR.cmake  FindFTGL.cmake  FindGLEW.cmake  FindGLM.cmake  FindLOG4CXX.cmake
src/: CMakeLists.txt  Launcher.cpp  Launcher.h  Launcher.hpp  all_includes.hpp  base.c  launcher.cpp  log4cxx.properties  main.cpp  main.h  main.hpp  standard_includes.h  standard_includes.hpp  test.c  test.h.in  version.cpp  version.h.in
src/core/: CMakeLists.txt  initial3d.hpp  initial3d_basics.hpp  shaderLibray.cmake  standard_includes.hpp
src/core/controls/: ControlHandler.cpp  ControlHandler.hpp  SphericalCameraControlHandler.cpp  SphericalCameraControlHandler.hpp
src/core/data/: Readme.txt  TODO  defaultFragmentShader.frag  defaultVertexShader.vert
src/core/exception/: Initial3dException.hpp
src/core/objects/: Sphere.cpp  Sphere.hpp  ThreeDimensionObject.hpp  ThreeDimensionsObject.cpp  ThreeDimensionsObject.hpp
src/core/scene/: Camera.cpp  Camera.hpp  Scene.cpp  Scene.hpp  SphericalCamera.cpp  SphericalCamera.hpp
src/core/system/: FTGLPixmapFontFontRenderer.cpp  FTGLPixmapFontFontRenderer.hpp  FontBox.cpp  FontBox.hpp  FontPoint.cpp  FontPoint.hpp  FontRenderer.cpp  FontRenderer.hpp  GLFWLauncher.cpp  GLFWLauncher.hpp  Launcher.cpp  Launcher.hpp  System.hpp  WindowProperties.cpp  WindowProperties.hpp
src/core/utils/: FPSTimer.cpp  FPSTimer.hpp  GameInformation.cpp  GameInformation.hpp  GameInformations.cpp  GameInformations.hpp  OpenGLUtils.hpp  PolygonNumberGameInformation.cpp  PolygonNumberGameInformation.hpp  ShaderLoader.cpp  ShaderLoader.hpp  ShadersLibrary.cpp  ShadersLibrary.cpp.in  ShadersLibrary.hpp  version.cpp  version.hpp.in
src/exception/: Initial3dException.cpp  Initial3dException.hpp
src/objects/: FirstTriangle.cpp  FirstTriangle.h  FirstTriangle.hpp  ThreeDimensionObject.hpp
src/projects/: CMakeLists.txt
src/projects/01_simple_triangle/: SimpleTriangleScene.cpp  SimpleTriangleScene.hpp  main.cpp
src/projects/02_simple_triangle_with_shaders/: CMakeLists.txt
src/projects/03_simple_camera/: SimpleCameraScene.hpp  main.cpp
src/projects/04_test_sphere/: SphereControlHandler.cpp  SphereControlHandler.hpp  main.cpp
src/projects/simple_camera/: CMakeLists.txt  SimpleCameraScene.cpp  SimpleCameraScene.hpp  SimpleTetrahedron.cpp  SimpleTetrahedron.hpp  SimpleTetrahedronShader.frag  SimpleTetrahedronShader.vert  SphereRunningCamera.cpp  SphereRunningCamera.hpp  log4cxx.properties  main.cpp
src/projects/simple_triangle/: CMakeLists.txt  FirstTriangle.cpp  FirstTriangle.hpp  SimpleTriangle.cpp  SimpleTriangle.hpp  SimpleTriangleScene.cpp  SimpleTriangleScene.hpp  SimpleTriangleShader.frag  SimpleTriangleShader.vert  log4cxx.properties  main.cpp
src/projects/simple_triangle_with_shaders/: SimpleTriangleScene.cpp  SimpleTriangleShader.frag  SimpleTriangleShader.vert
src/projects/test_sphere/: CMakeLists.txt  log4cxx.properties  main.cpp
src/scene/: Scene.cpp  Scene.hpp
src/system/: GLFWLauncher.cpp  GLFWLauncher.hpp  Launcher.cpp  Launcher.hpp
src/utils/: FPSTimer.cpp  FPSTimer.h  FPSTimer.hpp  ShaderLoader.cpp  ShaderLoader.hpp
